<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_green"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/padding_card"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <!-- App Logo Circle -->
    <FrameLayout
        android:layout_width="@dimen/avatar_size_large"
        android:layout_height="@dimen/avatar_size_large"
        android:layout_marginBottom="@dimen/spacing_md"
        android:background="@drawable/bg_icon_circle">

        <ImageView
            android:layout_width="@dimen/icon_size_large"
            android:layout_height="@dimen/icon_size_large"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_activity"
            app:tint="@color/primary_green" />
    </FrameLayout>

    <!-- App Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_xs"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <!-- App Subtitle -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_subtitle"
        android:textColor="@color/secondary_green"
        android:textSize="@dimen/text_size_normal" />

    <!-- Doctor Info -->
    <TextView
        android:id="@+id/tvNavDoctorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:text="@string/doctor_name"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_size_small"
        android:textStyle="italic" />

</LinearLayout>
